# codex-usage-stats

./: .gitignore  LICENSE  README.md  build-tauri.bat  build.ps1  package-lock.json  package.json  pyproject.toml  run-tauri.bat  run.bat
codex_stats/: __main__.py  parser.py  paths.py  server.py  stats.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tauri-ui/: app.js  index.html
tests/: test_parser.py
web/: app.js  index.html
