[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-stats"
version = "0.1.0"
description = "Local usage dashboard for OpenAI Codex Desktop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "codex-stats contributors" }]
dependencies = []

[project.scripts]
codex-stats = "codex_stats.__main__:main"

[tool.setuptools]
packages = ["codex_stats"]
include-package-data = true

[tool.setuptools.package-data]
codex_stats = []
