[package]
name = "codex-usage-stats"
version = "0.2.0"
description = "Codex Desktop usage dashboard"
authors = ["Felix"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
once_cell = "1.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
